# shield-ai

./: .gitignore  CHECKPOINT.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  flake.nix  fly.toml  install.sh  justfile  railway.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
config/: blocklist-sources.json
config/blocklists/: ads.txt  cryptominers.txt  gambling.txt  malware.txt  phishing.txt  sample.txt  social-trackers.txt  tracking.txt
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: background_tasks.rs  handlers.rs  main.rs  rate_limiter.rs  state.rs  webhooks.rs
crates/auth/: Cargo.toml
crates/auth/src/: handlers.rs  jwt.rs  lib.rs  middleware.rs  models.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  models.rs  qdrant.rs  sqlite.rs
crates/dns-core/: Cargo.toml
crates/dns-core/src/: blocklist_fetcher.rs  cache.rs  config.rs  filter.rs  lib.rs  resolver.rs  unified_filter.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/ml-engine/: Cargo.toml
crates/ml-engine/src/: lib.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: lib.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: lib.rs
crates/threat-intel/: Cargo.toml
crates/threat-intel/src/: anomaly.rs  domain_intel.rs  lib.rs  threat_feeds.rs  tunneling.rs
crates/tiers/: Cargo.toml
crates/tiers/src/: lib.rs
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf  prometheus.yml
docs/: GETTING_STARTED.md  MOBILE_UX_ITERATIONS.md  PRODUCT_ROADMAP.md  architecture.md  deployment.md  market-analysis.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/public/: ShieldAI-DNS.mobileconfig  manifest.json  sw.js
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: AnalyticsChart.tsx  DashboardStats.tsx  DeviceList.tsx  DeviceManager.tsx  NetworkGraph.tsx  NetworkVisualization.tsx  PrivacyDashboard.tsx  QueryStream.tsx  RiskAnalyzer.tsx  ThreatFeed.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/test/: setup.ts
landing/: index.html
mobile/: .env.example  .gitignore  App.tsx  app.json  eas.json  mock-server.js  package-lock.json  package.json
mobile/.maestro/: screenshot-flow.yaml
mobile/assets/: icon-config.json
mobile/assets/store/: SUBMISSION_CHECKLIST.md  metadata.json  release-notes.md  signing-config.md
mobile/maestro/: screenshot-flow.yaml
mobile/modules/vpn-module/: expo-module.config.json  package.json
mobile/modules/vpn-module/android/: build.gradle
mobile/modules/vpn-module/android/src/main/: AndroidManifest.xml
mobile/modules/vpn-module/android/src/main/java/com/shieldai/vpn/: ShieldVPNModule.kt  ShieldVPNPackage.kt  ShieldVPNService.kt
mobile/modules/vpn-module/ios/: PacketTunnelProvider.swift  ShieldVPN.m  ShieldVPN.swift
mobile/modules/vpn-module/src/: index.ts
mobile/plugins/: withShieldVPN.js
mobile/scripts/: generate-icons.js  generate-screenshots.js
mobile/src/api/: client.ts
mobile/src/components/: AnimatedIcon.tsx  Skeleton.tsx  SplashScreen.tsx
mobile/src/components/icons/: ShieldIcon.tsx  index.tsx
mobile/src/navigation/: MainNavigator.tsx  RootNavigator.tsx
mobile/src/screens/analytics/: AnalyticsScreen.tsx
mobile/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx
mobile/src/screens/dashboard/: HomeScreen.tsx
mobile/src/screens/family/: FamilyScreen.tsx
mobile/src/screens/onboarding/: OnboardingScreen.tsx
mobile/src/screens/protection/: ProtectionScreen.tsx
mobile/src/screens/settings/: SettingsScreen.tsx
mobile/src/services/: notifications.ts
mobile/src/stores/: analyticsStore.ts  authStore.ts  familyStore.ts  notificationStore.ts  protectionStore.ts
scripts/: setup.sh  test-api.sh
