[package]
name = "shield-api-server"
version.workspace = true
edition.workspace = true
description = "REST API server for Shield AI"

[dependencies]
shield-dns-core = { path = "../dns-core" }
shield-metrics = { path = "../metrics" }
shield-ai-engine = { path = "../ai-engine" }
shield-threat-intel = { path = "../threat-intel" }
shield-profiles = { path = "../profiles" }
shield-tiers = { path = "../tiers" }
shield-ml-engine = { path = "../ml-engine" }
shield-auth = { path = "../auth" }
shield-db = { path = "../db" }

tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
futures = "0.3"

[[bin]]
name = "api-server"
path = "src/main.rs"
