[package]
name = "shield-profiles"
version.workspace = true
edition.workspace = true
description = "Profile and time-based rules system for Shield AI"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }

[lib]
name = "shield_profiles"
path = "src/lib.rs"
