[package]
name = "shield-tiers"
version.workspace = true
edition.workspace = true
description = "Freemium tier and usage management for Shield AI"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
